fix checkbox alignment in share dialog, fix #11515

--- a/core/css/share.css
+++ b/core/css/share.css
@@ -87,6 +87,7 @@
 
 #dropdown input[type="checkbox"] {
 	margin:0 3px 0 8px;
+	vertical-align: middle;
 }
 
 a.showCruds {
